Fix CORS bug for prod